force-app/main/default/objects/ffr__InquiryTemplateTransposeDrill__c/ffr__InquiryTemplateTransposeDrill__c.object-meta.xml
<CustomObject>
    <description>Stores the action view template used when drilling on transposed fields.</description>
    <label>Action View Template Transpose Drill</label>
    <nameField>
        <displayFormat>ITTD-{0000}</displayFormat>
        <label>Action View Template Transpose Drill Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Transpose Drills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>