force-app/main/default/objects/ffr__InquiryTemplateTransposeDrill__c/fields/ffr__InquiryTemplateColumn__c.field-meta.xml
<CustomField>
    <fullName>ffr__InquiryTemplateColumn__c</fullName>
    <label>Action View Template Column</label>
    <referenceTo>ffr__InquiryTemplateColumn__c</referenceTo>
    <relationshipName>TransposeDrillTemplates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>