force-app/main/default/objects/ffr__InquiryTemplateTransposeDrill__c/fields/ffr__TransposeItem__c.field-meta.xml
<CustomField>
    <fullName>ffr__TransposeItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataview Transpose Item</label>
    <referenceTo>ffr__DataViewTransposeItem__c</referenceTo>
    <relationshipName>TransposeDrillTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>