force-app/main/default/objects/ffr__InquiryTemplateTransposeDrill__c/fields/ffr__TransposeItemValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__TransposeItemValue__c</fullName>
    <label>Value</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>